@@ -18,6 +18,8 @@
 
             Assert.IsNotNull(expression);
             Assert.IsInstanceOfType(expression, typeof(SelfExpression));
+
+            Assert.AreEqual("self", expression.AsString());
         }
 
         [TestMethod]
@@ -27,10 +29,12 @@
             IExpression expression = parser.ParseExpression();
 
             Assert.IsNotNull(expression);
-            Assert.IsInstanceOfType(expression, typeof(InstanceVariableExpression));
+            Assert.IsInstanceOfType(expression, typeof(VariableExpression));
 
-            InstanceVariableExpression ivexpression = (InstanceVariableExpression)expression;
-            Assert.AreEqual("foo", ivexpression.Name);
+            VariableExpression vexpression = (VariableExpression)expression;
+            Assert.AreEqual("foo", vexpression.Name);
+
+            Assert.AreEqual("foo", expression.AsString());
         }
 
         [TestMethod]
@@ -44,6 +48,38 @@
 
             ConstantExpression cexpression = (ConstantExpression)expression;
             Assert.AreEqual("foo", cexpression.Value);
+
+            Assert.AreEqual("'foo'", expression.AsString());
+        }
+
+        [TestMethod]
+        public void ParseFalse()
+        {
+            ModelParser parser = new ModelParser("false");
+            IExpression expression = parser.ParseExpression();
+
+            Assert.IsNotNull(expression);
+            Assert.IsInstanceOfType(expression, typeof(ConstantExpression));
+
+            ConstantExpression cexpression = (ConstantExpression)expression;
+            Assert.AreEqual(false, cexpression.Value);
+
+            Assert.AreEqual("false", expression.AsString());
+        }
+
+        [TestMethod]
+        public void ParseTrue()
+        {
+            ModelParser parser = new ModelParser("true");
+            IExpression expression = parser.ParseExpression();
+
+            Assert.IsNotNull(expression);
+            Assert.IsInstanceOfType(expression, typeof(ConstantExpression));
+
+            ConstantExpression cexpression = (ConstantExpression)expression;
+            Assert.AreEqual(true, cexpression.Value);
+
+            Assert.AreEqual("true", expression.AsString());
         }
 
         [TestMethod]
@@ -57,6 +93,8 @@
 
             ConstantExpression cexpression = (ConstantExpression)expression;
             Assert.AreEqual(123, cexpression.Value);
+
+            Assert.AreEqual("123", expression.AsString());
         }
 
         [TestMethod]
@@ -70,9 +108,11 @@
 
             MessageExpression mexpression = (MessageExpression)expression;
 
-            Assert.IsInstanceOfType(mexpression.Target, typeof(InstanceVariableExpression));
+            Assert.IsInstanceOfType(mexpression.Target, typeof(VariableExpression));
             Assert.AreEqual("length", mexpression.Selector);
             Assert.AreEqual(0, mexpression.Arguments.Count());
+
+            Assert.AreEqual("x length", expression.AsString());
         }
 
         [TestMethod]
@@ -102,10 +142,10 @@
 
             MessageExpression mexpression = (MessageExpression)expression;
 
-            Assert.IsInstanceOfType(mexpression.Target, typeof(InstanceVariableExpression));
+            Assert.IsInstanceOfType(mexpression.Target, typeof(VariableExpression));
 
-            InstanceVariableExpression ivexpression = (InstanceVariableExpression)mexpression.Target;
-            Assert.AreEqual("r", ivexpression.Name);
+            VariableExpression vexpression = (VariableExpression)mexpression.Target;
+            Assert.AreEqual("r", vexpression.Name);
 
             Assert.AreEqual("width:", mexpression.Selector);
             Assert.AreEqual(1, mexpression.Arguments.Count());
@@ -126,10 +166,10 @@
 
             MessageExpression mexpression = (MessageExpression)expression;
 
-            Assert.IsInstanceOfType(mexpression.Target, typeof(InstanceVariableExpression));
+            Assert.IsInstanceOfType(mexpression.Target, typeof(VariableExpression));
 
-            InstanceVariableExpression ivexpression = (InstanceVariableExpression)mexpression.Target;
-            Assert.AreEqual("r", ivexpression.Name);
+            VariableExpression vexpression = (VariableExpression)mexpression.Target;
+            Assert.AreEqual("r", vexpression.Name);
 
             Assert.AreEqual("width:height:", mexpression.Selector);
             Assert.AreEqual(2, mexpression.Arguments.Count());
@@ -143,6 +183,46 @@
 
             ConstantExpression cexpression2 = (ConstantExpression)mexpression.Arguments.Skip(1).First();
             Assert.AreEqual(200, cexpression2.Value);
+
+            Assert.AreEqual("r width: 100 height: 200", expression.AsString());
+        }
+
+        [TestMethod]
+        public void ParseAddMessage()
+        {
+            ModelParser parser = new ModelParser("10 + 20");
+            IExpression expression = parser.ParseExpression();
+
+            Assert.IsNotNull(expression);
+            Assert.IsInstanceOfType(expression, typeof(MessageExpression));
+
+            MessageExpression mexpression = (MessageExpression)expression;
+
+            Assert.IsInstanceOfType(mexpression.Target, typeof(ConstantExpression));
+
+            ConstantExpression cleftexpression = (ConstantExpression)mexpression.Target;
+            Assert.AreEqual(10, cleftexpression.Value);
+
+            Assert.AreEqual("+", mexpression.Selector);
+            Assert.AreEqual(1, mexpression.Arguments.Count());
+            Assert.IsInstanceOfType(mexpression.Arguments.First(), typeof(ConstantExpression));
+
+            ConstantExpression crightexpression = (ConstantExpression)mexpression.Arguments.First();
+            Assert.AreEqual(20, crightexpression.Value);
+
+            Assert.AreEqual("10 + 20", expression.AsString());
+        }
+
+        [TestMethod]
+        public void ParseTwoExpressions()
+        {
+            ModelParser parser = new ModelParser("x do. y do");
+            IExpression expression = parser.ParseExpressions();
+
+            Assert.IsNotNull(expression);
+            Assert.IsInstanceOfType(expression, typeof(CompositeExpression));
+
+            Assert.AreEqual("x do. y do", expression.AsString());
         }
     }
 }
