@@ -15,5 +15,18 @@
         }
 
         public object Value { get { return this.value; } }
+
+        public string AsString()
+        {
+            // TODO Escape chars
+            if (this.value is string)
+                return string.Format("'{0}'", this.value);
+            if (this.value.Equals(false))
+                return "false";
+            if (this.value.Equals(true))
+                return "true";
+
+            return this.value.ToString();
+        }
     }
 }
