@@ -27,5 +27,30 @@
         public string Selector { get { return this.selector; } }
 
         public IEnumerable<IExpression> Arguments { get { return this.arguments; } }
+
+        public string AsString()
+        {
+            // TODO Use string.Format
+            if (this.arguments.Count() == 0)
+                return this.target.AsString() + " " + this.selector;
+
+            if (this.arguments.Count() == 1)
+                return this.target.AsString() + " " + this.selector + " " + this.arguments.First().AsString();
+
+            string []names = this.selector.Split(':');
+
+            int k = 0;
+
+            // TODO Use String Builder
+            string result = this.target.AsString();
+
+            foreach (IExpression expr in this.arguments)
+            {
+                result += " " + names[k] + ": " + expr.AsString();
+                k++;
+            }
+
+            return result;
+        }
     }
 }
