@@ -226,6 +226,14 @@ All this to implement closure in blocks
 2011-09-16
 AST with first TreeParser and tests
 
+2011-09-17
+AST Removed
+Model, IExpression, ConstantExpression, InstanceVariableExpression, SelfExpression
+and MessageExpresion
+ModelParse with tests
+IExpression.AsString with tests
+CompositeExpression with tests
+
 Angel "Java" Lopez
 http://www.ajlopez.com/en
 http://ajlopez.wordpress.com/
